--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -24,10 +24,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: download text file
+    - name: Download text file
       uses: actions/download-artifact@v4
       with:
         name: hello-artifact
         path: ./artifacts
-    - name: display content of the file 
+    - name: Display content of the text file
       run: cat ./artifacts/hello.txt
